Sac & Map modulable graphiquement, et changement de background en fct de certains boss & nettoyage code